--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-slate
 title: Nick Eales’ blog
 description: Hoping to save someone some time (including myself)
 show_excerpts: true
-disqus_shortname: nickealesblo
+disqus_shortname: nickealesblog
