--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-slate
 title: Nick Eales’ blog
 description: Hoping to save someone some time (including myself)
 show_excerpts: true
-disqus_shortname: nickealesblog
-disqus:
-    shortname: nickealesblog
+comments:
+    provider               : "disqus" #"facebook" # "staticman"
+    disqus:
+      shortname            : "nickealesblog"
