--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,5 @@ theme: jekyll-theme-slate
 title: Nick Eales’ blog
 description: Hoping to save someone some time (including myself)
 show_excerpts: true
-comments:
-    provider               : "disqus" #"facebook" # "staticman"
-    disqus:
-      shortname            : "nickealesblog"
+disqus_shortname : "nickealesblog"
+baseurl: "nickeales.github.io"
